# metalllm

./: CMakeLists.txt  README.md  attention.metal  elementwise.metal  embed.metal  layernorm.metal  linear.metal  loss.metal  main.cpp  matmul.metal  matmulbias.metal  mlp.metal  model.h  optimstep.metal  relu.metal  softmax.metal  tokenprocessor.h
